--- a/src/app/components/app-menu/app-menu.component.html
+++ b/src/app/components/app-menu/app-menu.component.html
@@ -1,5 +1,5 @@
 <!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-dark-primary elevation-4 ">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
         <span class="brand-text font-weight-light">AdminLTE 3</span>
@@ -12,12 +12,15 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/pages/forms" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
-                        <p>
-                            Simple Link
-                            <span class="right badge badge-danger">New</span>
-                        </p>
+                        <p> Formulários</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/pages/request" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p> Solicitações</p>
                     </a>
                 </li>
             </ul>
