--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 <app-app-menu></app-app-menu>
 <app-appheader></app-appheader>
-<div class="wrapper">
+<div id="page-wrapper">
     <router-outlet></router-outlet>
-</div> 
+</div>
