--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-
-
-<router-outlet></router-outlet>
+<body class="sidebar-mini layout-fixed layout-navbar-fixed ">
+        <router-outlet></router-outlet>
+</body>
