--- a/src/app/pages/forms/list/list.component.html
+++ b/src/app/pages/forms/list/list.component.html
@@ -3,11 +3,11 @@
         <div>
             <div class="d-flex">
                 <i class="pi pi-search icon"></i>
-                <h3>Solicitações</h3>
+                <h3>Formulários</h3>
             </div>
         </div>
         <div>
-            <p-button (click)="clickNew()" icon="pi pi-plus" label="Cadastrar Solicitação"></p-button>
+            <p-button (click)="clickNew()" icon="pi pi-plus" label="Cadastrar Formulário"></p-button>
         </div>
     </div>
 
